Fix typo in generated_files `a name'.

--- a/htdocs/faq.html
+++ b/htdocs/faq.html
@@ -530,7 +530,7 @@ from <a href="ftp://ftp.yggdrasil.com/private/hjl/libg++-2.8.1-980119.tar.gz">
 ftp://ftp.yggdrasil.com/private/hjl/libg++-2.8.1-980119.tar.gz</a>
 
 <hr>
-<h2> <a name="generated_files/">autoconf, bison, xgettext, automake, etc<a></h2>
+<h2> <a name="generated_files">autoconf, bison, xgettext, automake, etc<a></h2>
 <p>If you're using diffs up dated from one snapshot to the next, or
 if you're using the CVS repository, you may need several additional programs
 to build egcs.
