--- a/htdocs/install/configure.html
+++ b/htdocs/install/configure.html
@@ -69,9 +69,14 @@ egcs.  A partial list of supported <tt>options</tt>:
   <li> <tt>--enable-shared</tt> -- Build shared versions of the C++ runtime
   libraries if supported <tt>--disable-shared</tt> is the default.
 
-  <li> <tt>--enable-haifa</tt> -- Enable the new Haifa instruction scheduler in the
-  compiler; the new scheduler can significantly improve code on some targets.
-  <tt>--disable-haifa</tt> is currently the default on all platforms except the HPPA.
+  <li> <tt>--enable-haifa</tt> -- Enable the new Haifa instruction scheduler
+  in the compiler; the new scheduler can significantly improve code on some
+  targets.
+  <tt>For egcs-1.0.x releases --disable-haifa</tt> is the default on all
+  platforms except the HPPA.
+
+  <tt>For newer releases --disable-haifa</tt> is the default on all
+  platforms except the alpha, hppa, powerpc, rs6000, sparc and m32r.
 
   <li> <tt>--with-gnu-as</tt> -- Specify that the compiler should assume the GNU
   assembler (aka gas) is available. 
@@ -116,7 +121,7 @@ that each <tt>--with</tt> option has a corresponding <tt>--without</tt> option.
 
 <p>
 <hr>
-<i>Last modified on Jan 2, 1998.</i>
+<i>Last modified on May  6, 1998.</i>
 
 </body>
 </html>
