--- a/htdocs/install/configure.html
+++ b/htdocs/install/configure.html
@@ -72,10 +72,9 @@ egcs.  A partial list of supported <tt>options</tt>:
   <li> <tt>--enable-haifa</tt> -- Enable the new Haifa instruction scheduler
   in the compiler; the new scheduler can significantly improve code on some
   targets.
-  <tt>For egcs-1.0.x releases --disable-haifa</tt> is the default on all
+  For egcs-1.0.x releases <tt>--disable-haifa</tt> is the default on all
   platforms except the HPPA.
-
-  <tt>For newer releases --disable-haifa</tt> is the default on all
+  For newer releases <tt>--disable-haifa</tt> is the default on all
   platforms except the alpha, hppa, powerpc, rs6000, sparc and m32r.
 
   <li> <tt>--with-gnu-as</tt> -- Specify that the compiler should assume the GNU
