--- a/htdocs/install/configure.html
+++ b/htdocs/install/configure.html
@@ -72,9 +72,9 @@ egcs.  A partial list of supported <tt>options</tt>:
   <li> <tt>--enable-haifa</tt> -- Enable the new Haifa instruction scheduler
   in the compiler; the new scheduler can significantly improve code on some
   targets.
-  For egcs-1.0.x releases <tt>--disable-haifa</tt> is the default on all
+  <br>For egcs-1.0.x releases <tt>--disable-haifa</tt> is the default on all
   platforms except the HPPA.
-  For newer releases <tt>--disable-haifa</tt> is the default on all
+  <br>For newer releases <tt>--disable-haifa</tt> is the default on all
   platforms except the alpha, hppa, powerpc, rs6000, sparc and m32r.
 
   <li> <tt>--with-gnu-as</tt> -- Specify that the compiler should assume the GNU
