Tweak from Gerald.

--- a/htdocs/install/configure.html
+++ b/htdocs/install/configure.html
@@ -1,9 +1,9 @@
 <html>
 <head>
-<title>Configuring egcs-1.0.1 </title>
+<title>Configuring egcs</title>
 </head>
 <body bgcolor="white">
-<h1 align="center">Configuring egcs-1.0.1</h1>
+<h1 align="center">Configuring egcs</h1>
 
 <p>Like most GNU software, egcs must be configured before it can be built.
 This document attempts to describe the recommended configuration procedure
@@ -13,10 +13,12 @@ for both native and cross targets.
 egcs; we use <i>objdir</i> to refer to the toplevel build/object
 directory for egcs.
 
-<p>First, we <b>highly</b> recommend that egcs be built into a separate
-directory than the sources.  This is how we generally build egcs; building
-where <i>srcdir</i> == <i>objdir</i> should still work, but doesn't get
-extensive testing.
+<p>First, we <b>highly</b> recommend that egcs be built into a
+separate directory than the sources which does <b>not</b> reside
+within the source tree.  This is how we generally build egcs; building
+where <i>srcdir</i> == <i>objdir</i> should still work, but doesn't
+get extensive testing; building where <i>objdir</i> is a subdirectory
+of <i>srcdir</i> is unsupported.
 
 <p>Second, when configuring a native system, either "cc" must be in your
 path or you must set CC in your environment before running configure.
@@ -120,7 +122,7 @@ that each <tt>--with</tt> option has a corresponding <tt>--without</tt> option.
 
 <p>
 <hr>
-<i>Last modified on May  6, 1998.</i>
+<i>Last modified on May  7, 1998.</i>
 
 </body>
 </html>
