Another tweak from Gerald.

--- a/htdocs/faq.html
+++ b/htdocs/faq.html
@@ -98,9 +98,9 @@ are able to commit changes to their part of egcs directly into the
 sources without going through an intermediary.
 
 <p>There have been many potential gcc developers who were not able to
-participate in gcc development in the past.  We these people to help in
-any way they can; we ultimately want gcc to be the best compiler in the
-world.
+participate in gcc development in the past.  We want these people to
+help in any way they can; we ultimately want gcc to be the best compiler
+in the world.
 
 <p>A compiler is a complicated piece of software, there will still be
 strong central maintainers who will reject patches, who will demand
@@ -607,7 +607,7 @@ tag "egcs_latest_snapshot".
 
 <hr>
 <p><a href="index.html">Return to the egcs home page</a>
-<p><i>Last modified:  April 23, 1998</i>
+<p><i>Last modified:  May  9, 1998</i>
 
 <!--#include virtual="/glimpsebox.html"-->
 </body>
