--- a/htdocs/cvswrite.html
+++ b/htdocs/cvswrite.html
@@ -2,7 +2,7 @@
 <head>
 <title> Read-write CVS access</title>
 </head>
-<body bgcolor="white">
+<body>
 
 <p>February 2, 1998
 
@@ -12,10 +12,10 @@ access available the CVS repository for all our significant developers.
 <p>If you don't already have CVS, we recommend you pick up a recent copy from
 cyclic software at <a href="http://www.cyclic.com/"> http://www.cyclic.com</a>.
 
-<p>Authenticated access is provided via ssh, which you can retrive from
+<p>Authenticated access is provided via ssh, which you can retrieve from
 <a href="http://www.cs.hut.fi/ssh/"> http://www.cs.hut.fi.</a>  ssh should
 build and install without any trouble and the default configuration files
-should be suitable for access to the egcs cvs server.
+should be suitable for access to the egcs CVS server.
 
 <p>You will need to provide us with your public key.  You can generate one
 via the "ssh-keygen" program.  This will store your public key in to the
@@ -47,6 +47,14 @@ all the "Root" files in the local tree with the following contents:
 egcs.cygnus.com:/egcs/carton/cvsfiles
 </pre>
 
+<p>To avoid the nuisance of having to supply your passphrase for each
+operation, you may want to use <code>ssh-agent</code>(1) followed by
+<code>ssh-add</code>(1) and entering your passphrase once for all.
+Either start your session as a child of <code>ssh-agent</code> or run
+it as a demon and set the values of the environment variables
+<code>SSH_AUTHENTICATION_SOCKET</code> and <code>SSH_AGENT_PID</code>
+in each relevant process to what <code>ssh-agent</code> prints when it
+starts.
 
 <p>Enjoy!
 
@@ -63,9 +71,9 @@ your changes back in they will automatically be checked out into the
 web server's data area.
 
 <hr>
-<i>Last modified on March 06, 1998.</i>
+<i>Last modified on May 07, 1998.</i>
 
 <hr>
-<a href="">Return to the egcs home page</a>
+<a href="/">Return to the egcs home page</a>
 </body>
 </html>
