--- a/htdocs/install/build.html
+++ b/htdocs/install/build.html
@@ -1,9 +1,9 @@
 <html>
 <head>
-<title>Building egcs-1.0.1 </title>
+<title>Building egcs </title>
 </head>
 <body bgcolor="white">
-<h1 align="center">Building egcs-1.0.1</h1>
+<h1 align="center">Building egcs</h1>
 
 <p>Now that egcs is configured, you are ready to build the compiler and
 runtime libraries.
@@ -60,7 +60,7 @@ following steps:
 
 <p>
 <hr>
-<i>Last modified on Jan 2, 1998.</i>
+<i>Last modified on May 15, 1998.</i>
 
 <!--#include virtual="/glimpsebox.html"-->
 </body>
