--- a/htdocs/install/index.html
+++ b/htdocs/install/index.html
@@ -1,9 +1,9 @@
 <html>
 <head>
-<title>Installing egcs-1.0.1 </title>
+<title>Installing egcs</title>
 </head>
 <body bgcolor="white">
-<h1 align="center">Installing egcs-1.0.1</h1>
+<h1 align="center">Installing egcs</h1>
 
 <p>This document describes the generic installation procedure for egcs as
 well as detailing some target specific installation instructions for egcs.
@@ -43,5 +43,5 @@ a bug report.
 </body>
 </html>
 <hr>
-<i>Last modified on Jan 2, 1998.</i>
+<i>Last modified on May 15, 1998.</i>
 
