--- a/htdocs/install/specific.html
+++ b/htdocs/install/specific.html
@@ -1,9 +1,9 @@
 <html>
 <head>
-<title>Host/Target specific installation notes for egcs-1.0.1 </title>
+<title>Host/Target specific installation notes for egcs</title>
 </head>
 <body bgcolor="white">
-<h1 align="center">Host/Target specific installation notes for egcs-1.0.1</h1>
+<h1 align="center">Host/Target specific installation notes for egcs</h1>
 
 <p><b>alpha*-*-*</b><br>
 No specific installation needs/instructions.
@@ -123,7 +123,7 @@ exception handling
 <p>XXX Linux stuff
 -k encaps stuff
 <hr>
-<i>Last modified on February 7, 1998.</i>
+<i>Last modified on May 15, 1998.</i>
 
 <!--#include virtual="/glimpsebox.html"-->
 </body>
