--- a/htdocs/install/test.html
+++ b/htdocs/install/test.html
@@ -1,9 +1,9 @@
 <html>
 <head>
-<title>Testing egcs-1.0.1 </title>
+<title>Testing egcs</title>
 </head>
 <body bgcolor="white">
-<h1 align="center">Testing egcs-1.0.1</h1>
+<h1 align="center">Testing egcs</h1>
 
 <p>Before you install egcs, you might wish to run the egcs testsuite; this
 step is optional and may require you to download additional software.
@@ -31,7 +31,7 @@ well as the C++ runtime libraries.
 <p> How to interpret test results TBD.
 
 <hr>
-<i>Last modified on Jan 2, 1998.</i>
+<i>Last modified on May 15, 1998.</i>
 
 <!--#include virtual="/glimpsebox.html"-->
 </body>
