--- a/htdocs/index.html
+++ b/htdocs/index.html
@@ -32,13 +32,17 @@ ultimate inclusion into the gcc2 tree.
 <p>We will provide regular, high quality <a
 href="#releases">releases</a>. We want those releases to work well on
 a variety of native (including linux) and cross targets.  <a
-href="egcs-1.0.2.html"> egcs-1.0.2</a> is the current release.
+href="egcs-1.0.3.html"> egcs-1.0.3</a> is the current release.
 
 <p>egcs is pronounced "eggs", the c is silent.
 <hr>
 <h2>NEWS</h2>
 
 <dl>
+<dt><b>May 15, 1998</b></dt>
+<dd>
+  <a href="egcs-1.0.3.html"> <b>egcs-1.0.3 released!</b></a>.
+</dd>
 <dt><b>March 18, 1998</b></dt>
 <dd>
   <a href="egcs-1.0.2.html"> <b>egcs-1.0.2 released!</b></a>.
