update irix5.2 make issue.

--- a/htdocs/faq.html
+++ b/htdocs/faq.html
@@ -277,9 +277,10 @@ reasons we highly recommend using GAS on HPs.
 <p>When building egcs, the build process loops rebuilding cc1 over and
 over again.  This happens on mips-sgi-irix5.2, and possibly other platforms.
 
-<p>This is probably a bug somewhere in the egcs Makefile.  Until we find and
-fix this bug we recommend you use GNU make instead of vendor supplied make
-programs.
+<p> It has been reported that this is a known bug in the make shipped with
+Irix 5.2.  We recommend you use GNU make instead of the vendor supplied
+make program; however, you may have success with "smake" on Irix 5.2 if
+you do not have GNU make available.
 
 <hr>
 <h2> <a name="rpath">Dynamic linker is unable to find GCC libraries</a></h2>
