--- a/htdocs/index.html
+++ b/htdocs/index.html
@@ -39,6 +39,10 @@ href="egcs-1.0.3.html"> egcs-1.0.3</a> is the current release.
 <h2>NEWS</h2>
 
 <dl>
+<dt><b>May 18, 1998</b></dt>
+<dd>
+  <a href="gcse.html"> <b>Cygnus donates gcse optimization pass</b></a>.
+</dd>
 <dt><b>May 15, 1998</b></dt>
 <dd>
   <a href="egcs-1.0.3.html"> <b>egcs-1.0.3 released!</b></a>.
