Note Doug's contribution.

--- a/htdocs/gcse.html
+++ b/htdocs/gcse.html
@@ -10,6 +10,10 @@
 <p>We are pleased to announce that Cygnus has donated a global optimization
 framework and new optimizers based on that framework to the EGCS project.
 
+<p>An extra special thanks to Doug Evans who wrote much of this code as his
+last GCC project.  Thanks for the many contributions over the years!
+
+
 <p> The global optimization framework provides:
 <ul>
   <li> Functions for breaking a program into basic blocks.
