--- a/htdocs/gcse.html
+++ b/htdocs/gcse.html
@@ -52,7 +52,7 @@ flow graph (please forgive the poor graphics, I'm no HTML or graphics guru).
 
 
 This example has a computation of "exp1" in blocks B2, B3 and B6.  Assume
-that the remaining blocks to not effect the evaluation of "exp1".
+that the remaining blocks do not effect the evaluation of "exp1".
 
 <p>Classic GCSE will only eliminate the computation of "exp1" found in block
 B3 since the evaluation in block B6 can be reached via a path which does not
