Add mirror in Romania.

--- a/htdocs/index.html
+++ b/htdocs/index.html
@@ -155,7 +155,7 @@ egcs.cygnus.com:/pub/egcs/releases</a>.
 <h2><a name="mirrors">MIRROR LISTS</a></h2>
 
 <p>These sites mirror the egcs ftp directory directly.  The official
-ftp.cygnus.com server is in California in the US.  Please let us know
+egcs.cygnus.com server is in California in the US.  Please let us know
 if you are mirroring the egcs pages so we can note it here!
 
 <ul>
@@ -174,6 +174,7 @@ if you are mirroring the egcs pages so we can note it here!
 <LI>Sweden: <A HREF="ftp://ftp.sunet.se/pub/gnu/egcs/">ftp.sunet.se</a>
 <LI>Brasil (releases only, no snapshots): <A HREF="ftp://ftp.unicamp.br/pub/gnu/=EXTRA=/cygnus/egcs/">ftp.unicamp.br</a>
 <LI>Portugal: <A HREF="ftp://ftp.lca.uevora.pt/pub/egcs">ftp.lca.uevora.pt</a>
+<LI>Romania: <A HREF="ftp://ftp.lbi.ro/mirrors/ftp.cygnus.com/pub/egcs">ftp.lbi.ro</a>, thanks to <a href="mailto:tim@lbi.ro">Surdu Bogdan</a>!
 </ul>
 
 <p>These sites are mirroring <tt>ftp.goof.com</tt>'s site, so we get to mooch
@@ -193,7 +194,7 @@ to the egcs project.
 
 <hr>
 <a name="glimpsebox"></a>
-<i>Last modified on April 06, 1998.</i>
+<i>Last modified on May 20, 1998.</i>
 
 <!--#include virtual="/glimpsebox.html"-->
 </body>
