--- a/htdocs/contribute.html
+++ b/htdocs/contribute.html
@@ -79,13 +79,13 @@
   </ul>
 
   When you have all these pieces, bundle them up in a mail message and
-  send it to <a href="mailto:egcs@cygnus.com">egcs@cygnus.com</a>.
+  send it to <a href="mailto:egcs-patches@cygnus.com">egcs-patches@cygnus.com</a>.
 
   </dd>
 </dl>
 
 <hr>
-<i>Last modified on April 28, 1998.</i>
+<i>Last modified on May 26, 1998.</i>
 
 <hr>
 <a href="">Return to the egcs home page</a>
