--- a/htdocs/index.html
+++ b/htdocs/index.html
@@ -39,6 +39,18 @@ href="egcs-1.0.3.html"> egcs-1.0.3</a> is the current release.
 <h2>NEWS</h2>
 
 <dl>
+<dt><b>May 26, 1998</b></dt>
+<dd>
+  We have added two new mailing lists for the egcs project.
+  <b>egcs-cvs</b> and <b>egcs-patches</b>.
+
+  <p>When a patch is checked into the CVS repository, a check-in notification
+  message is automatically sent to the <b>egcs-cvs</b> mailing list.  This will
+  allow developers to monitor changes as they are made.
+
+  <p>Patch submissions should be sent to <b>egcs-patches</b> instead of the
+  main egcs list.  This is primarily to help ensure that patch submissions do
+  not get lost in the large volume of the main mailing list.
 <dt><b>May 18, 1998</b></dt>
 <dd>
   <a href="gcse.html"> <b>Cygnus donates gcse optimization pass</b></a>.
@@ -93,20 +105,26 @@ answering some of them</a>.  We'll add more later.
 
 <h2><a name="mailinglists">MAILING LISTS</a></h2>
 
-<p>There are three mailing lists for egcs, <tt>egcs-announce</tt>,
-<tt>egcs</tt>, and <tt>egcs-bugs</tt>.  They are all managed by
-majordomo.
+<p>There are five mailing lists for egcs, <tt>egcs-announce</tt>,
+<tt>egcs</tt>, <tt>egcs-bugs, <tt>egcs-cvs</tt>, and <tt>egcs-patches</tt>.
+They are all managed by majordomo.
 
 <p><b>egcs-announce</b> is a read-only, low-volume mailing list where
 we'll post announcements about important events or releases.
 <b>egcs</b> is a high-volume general list for developer discussions.
 <b>egcs-bugs</b> is for reporting and discussing bugs.
+<b>egcs-cvs</b> is for cvs checkin messages.
+<b>egcs-patches</b> is for patch submissions.
 
 <p>To subscribe to any of these, send mail to
 <a href="mailto:egcs-announce-request@cygnus.com"><tt>egcs-announce-request@cygnus.com</tt></a>,
 <a href="mailto:egcs-request@cygnus.com"><tt>egcs-request@cygnus.com</tt></a>
 or
 <a href="mailto:egcs-bugs-request@cygnus.com"><tt>egcs-bugs-request@cygnus.com</tt></a>
+or
+<a href="mailto:egcs-cvs-request@cygnus.com"><tt>egcs-cvs-request@cygnus.com</tt></a>
+or
+<a href="mailto:egcs-patches-request@cygnus.com"><tt>egcs-patches-request@cygnus.com</tt></a>
 with a message body of
 
 <blockquote>
@@ -121,7 +139,9 @@ with a message body of
 <a href="http://www.cygnus.com/ml/egcs/">egcs</a>,
 <a href="http://www.cygnus.com/ml/egcs-announce/">egcs-announce</a>,
 and
-<a href="http://www.cygnus.com/ml/egcs-bugs/">egcs-bugs</a>.
+<a href="http://www.cygnus.com/ml/egcs-bugs/">egcs-bugs</a>,
+<a href="http://www.cygnus.com/ml/egcs-cvs/">egcs-cvs</a>,
+<a href="http://www.cygnus.com/ml/egcs-patches/">egcs-patches</a>.
 
 
 <h2><a name=snapshots>SNAPSHOTS</h2>
@@ -194,7 +214,7 @@ to the egcs project.
 
 <hr>
 <a name="glimpsebox"></a>
-<i>Last modified on May 20, 1998.</i>
+<i>Last modified on May 26, 1998.</i>
 
 <!--#include virtual="/glimpsebox.html"-->
 </body>
