Tweak procedures for sending patches.

--- a/htdocs/contribute.html
+++ b/htdocs/contribute.html
@@ -73,9 +73,11 @@
        new features a description of the feature and your implementation.
   <li> A ChangeLog entry as plaintext; see the various ChangeLog files
        for format and content.
-  <li> The patch itself.  Use "diff -c3p OLD NEW" or "diff -up OLD NEW".
-       If your version of diff does not support these options, then get
-       the latest version of GNU diff.
+  <li> The patch itself.  If you are accessing the <a href="cvs.html">
+       CVS repository</a> at Cygnus, use "cvs update; cvs diff"; else use
+       "diff -c3p OLD NEW" or "diff -up OLD NEW".  If your
+       version of diff does not support these options, then get the
+       latest version of GNU diff.
   </ul>
 
   When you have all these pieces, bundle them up in a mail message and
