--- a/htdocs/index.html
+++ b/htdocs/index.html
@@ -106,8 +106,8 @@ answering some of them</a>.  We'll add more later.
 <h2><a name="mailinglists">MAILING LISTS</a></h2>
 
 <p>There are five mailing lists for egcs, <tt>egcs-announce</tt>,
-<tt>egcs</tt>, <tt>egcs-bugs, <tt>egcs-cvs</tt>, and <tt>egcs-patches</tt>.
-They are all managed by majordomo.
+<tt>egcs</tt>, <tt>egcs-bugs</tt>, <tt>egcs-cvs</tt>, and
+<tt>egcs-patches</tt>.  They are all managed by majordomo.
 
 <p><b>egcs-announce</b> is a read-only, low-volume mailing list where
 we'll post announcements about important events or releases.
