--- a/htdocs/contribute.html
+++ b/htdocs/contribute.html
@@ -72,7 +72,9 @@
   <li> A description of the bug and how your patch fixes this bug.  For
        new features a description of the feature and your implementation.
   <li> A ChangeLog entry as plaintext; see the various ChangeLog files
-       for format and content.
+       for format and content.<br>
+       Note that, unlike some other projects, we do require ChangeLogs
+       also for documentation (i.e., .texi files).
   <li> The patch itself.  If you are accessing the <a href="cvs.html">
        CVS repository</a> at Cygnus, use "cvs update; cvs diff"; else use
        "diff -c3p OLD NEW" or "diff -up OLD NEW".  If your
@@ -87,7 +89,7 @@
 </dl>
 
 <hr>
-<i>Last modified on May 26, 1998.</i>
+<i>Last modified on May 28, 1998.</i>
 
 <hr>
 <a href="">Return to the egcs home page</a>
