--- a/htdocs/contribute.html
+++ b/htdocs/contribute.html
@@ -85,11 +85,14 @@
   When you have all these pieces, bundle them up in a mail message and
   send it to <a href="mailto:egcs-patches@cygnus.com">egcs-patches@cygnus.com</a>.
 
+  Note all patches and related discussion should be send to the egcs-patches
+  list.
+
   </dd>
 </dl>
 
 <hr>
-<i>Last modified on May 28, 1998.</i>
+<i>Last modified on May 29, 1998.</i>
 
 <hr>
 <a href="">Return to the egcs home page</a>
