Add Cambridge & Austrrlia mirrors.

--- a/htdocs/index.html
+++ b/htdocs/index.html
@@ -181,6 +181,7 @@ if you are mirroring the egcs pages so we can note it here!
 <ul>
 <li>US (Stanford): <a href="ftp://go.cygnus.com/pub/ftp.cygnus.com/egcs/">go.cygnus.com</a>
 <li>US (east coast): <a href="ftp://ftp.goof.com/pub/pcg/egcs/">ftp.goof.com</a>
+<li>US (east coast, releases only): <a href="ftp://cambridge.cygnus.com/pub/egcs/">cambridge.cygnus.com</a>
 <li>US (Arizona): <a href="ftp://ftp.ninemoons.com/pub/mirrors/egcs/">ftp.ninemoons.com</a>
 <li>UK: <a href="ftp://sunsite.doc.ic.ac.uk/Mirrors/egcs.cygnus.com/pub/egcs/">sunsite.doc.ic.ac.uk</a>
 <li>Austria: <a href="ftp://gd.tuwien.ac.at/gnu/egcs/">gd.tuwien.ac.at</a>
@@ -195,6 +196,7 @@ if you are mirroring the egcs pages so we can note it here!
 <LI>Brasil (releases only, no snapshots): <A HREF="ftp://ftp.unicamp.br/pub/gnu/=EXTRA=/cygnus/egcs/">ftp.unicamp.br</a>
 <LI>Portugal: <A HREF="ftp://ftp.lca.uevora.pt/pub/egcs">ftp.lca.uevora.pt</a>
 <LI>Romania: <A HREF="ftp://ftp.lbi.ro/mirrors/ftp.cygnus.com/pub/egcs">ftp.lbi.ro</a>, thanks to <a href="mailto:tim@lbi.ro">Surdu Bogdan</a>!
+<LI>Australia/NZ (release only): <a href="ftp://moshpit.cygnus.com/pub/egcs/">moshpit.cygnus.com</a>
 </ul>
 
 <p>These sites are mirroring <tt>ftp.goof.com</tt>'s site, so we get to mooch
@@ -214,7 +216,7 @@ to the egcs project.
 
 <hr>
 <a name="glimpsebox"></a>
-<i>Last modified on May 26, 1998.</i>
+<i>Last modified on May 29, 1998.</i>
 
 <!--#include virtual="/glimpsebox.html"-->
 </body>
