Recommend against objdir and prefix being the same or a subdir of the other.

--- a/htdocs/install/configure.html
+++ b/htdocs/install/configure.html
@@ -58,7 +58,10 @@ egcs.  A partial list of supported <tt>options</tt>:
   other than the default.  The toplevel installation directory defaults to
   /usr/local.
 
-  <br>These additional options control where certain parts of the distribution
+  <p> We <b>highly</b> recommend against <i>prefix</i> being the same or a
+  subdirectory of <i>objdir</i> or vice versa.
+
+  <p>These additional options control where certain parts of the distribution
   are installed.  Normally you should not need to use these options.
   <ul>
      <li> <tt>--with-local-prefix=</tt><i>dirname</i> -- Specify the installation
