Break out mailing list and mirror site information onto their own pages.

--- a/htdocs/index.html
+++ b/htdocs/index.html
@@ -103,46 +103,11 @@ href="egcs-1.0.3.html"> egcs-1.0.3</a> is the current release.
 <p>Got questions about egcs?  Here is <a href="faq.html">our attempt at
 answering some of them</a>.  We'll add more later.
 
-<h2><a name="mailinglists">MAILING LISTS</a></h2>
+<h2>MAILING LISTS</h2>
 
-<p>There are five mailing lists for egcs, <tt>egcs-announce</tt>,
-<tt>egcs</tt>, <tt>egcs-bugs</tt>, <tt>egcs-cvs</tt>, and
-<tt>egcs-patches</tt>.  They are all managed by majordomo.
-
-<p><b>egcs-announce</b> is a read-only, low-volume mailing list where
-we'll post announcements about important events or releases.
-<b>egcs</b> is a high-volume general list for developer discussions.
-<b>egcs-bugs</b> is for reporting and discussing bugs.
-<b>egcs-cvs</b> is for cvs checkin messages.
-<b>egcs-patches</b> is for patch submissions.
-
-<p>To subscribe to any of these, send mail to
-<a href="mailto:egcs-announce-request@cygnus.com"><tt>egcs-announce-request@cygnus.com</tt></a>,
-<a href="mailto:egcs-request@cygnus.com"><tt>egcs-request@cygnus.com</tt></a>
-or
-<a href="mailto:egcs-bugs-request@cygnus.com"><tt>egcs-bugs-request@cygnus.com</tt></a>
-or
-<a href="mailto:egcs-cvs-request@cygnus.com"><tt>egcs-cvs-request@cygnus.com</tt></a>
-or
-<a href="mailto:egcs-patches-request@cygnus.com"><tt>egcs-patches-request@cygnus.com</tt></a>
-with a message body of
-
-<blockquote>
-  <tt>subscribe </tt> <i>listname</i> <i>your-email-address</i>
-</blockquote>
-
-<p>To unsubscribe, send a mail note to the appropriate
-<tt>-request@cygnus.com</tt> address with a message body of
-<tt>unsubscribe </tt> <i>listname</i> <i>your-email-address</i>.
-
-  <p>Web archives for all three mailing lists are on-line;
-<a href="http://www.cygnus.com/ml/egcs/">egcs</a>,
-<a href="http://www.cygnus.com/ml/egcs-announce/">egcs-announce</a>,
-and
-<a href="http://www.cygnus.com/ml/egcs-bugs/">egcs-bugs</a>,
-<a href="http://www.cygnus.com/ml/egcs-cvs/">egcs-cvs</a>,
-<a href="http://www.cygnus.com/ml/egcs-patches/">egcs-patches</a>.
-
+<p>Want to read about egcs development or post messages to the egcs
+lists?  All the information you need to access the <a href="lists.html">
+mailing lists </a> can be found here. 
 
 <h2><a name=snapshots>SNAPSHOTS</h2>
 
@@ -171,44 +136,13 @@ to do since it may become impossible to update to an official snapshot.
 href="ftp://egcs.cygnus.com/pub/egcs/releases/index.html">
 egcs.cygnus.com:/pub/egcs/releases</a>.
 
-
 <h2><a name="mirrors">MIRROR LISTS</a></h2>
 
-<p>These sites mirror the egcs ftp directory directly.  The official
-egcs.cygnus.com server is in California in the US.  Please let us know
-if you are mirroring the egcs pages so we can note it here!
+<p> Several sites around the world mirror our FTP server.  When downloading
+release or snapshots, please try to select an appropriate 
+<a href="mirrors.html"> mirror site</a>. 
 
-<ul>
-<li>US (Stanford): <a href="ftp://go.cygnus.com/pub/ftp.cygnus.com/egcs/">go.cygnus.com</a>
-<li>US (east coast): <a href="ftp://ftp.goof.com/pub/pcg/egcs/">ftp.goof.com</a>
-<li>US (east coast, releases only): <a href="ftp://cambridge.cygnus.com/pub/egcs/">cambridge.cygnus.com</a>
-<li>US (Arizona): <a href="ftp://ftp.ninemoons.com/pub/mirrors/egcs/">ftp.ninemoons.com</a>
-<li>UK: <a href="ftp://sunsite.doc.ic.ac.uk/Mirrors/egcs.cygnus.com/pub/egcs/">sunsite.doc.ic.ac.uk</a>
-<li>Austria: <a href="ftp://gd.tuwien.ac.at/gnu/egcs/">gd.tuwien.ac.at</a>
-<li>France: <a href="ftp://ftp.ilog.fr/pub/Mirrors/egcs/">ftp.ilog.fr</a>
-<li>France: <a href="ftp://ftp.lip6.fr/pub/egcs/">ftp.lip6.fr</a>
-<li>Czech Republic: <a href="ftp://sunsite.mff.cuni.cz/pub/GNU/egcs/">sunsite.mff.cuni.cz</a>
-<li>Denmark: <a href="ftp://sunsite.auc.dk/pub/egcs/">sunsite.auc.dk</a>
-<LI>Germany (Berlin): <A HREF="ftp://ftp.fu-berlin.de/unix/languages/egcs/">Germany: ftp.fu-berlin.de </A>, thanks to <A HREF="mailto:leitner@math.fu-berlin.de">Felix von Leitner</A>!
-<LI>Germany: <A HREF="ftp://ftp.gwdg.de/pub/cygnus/egcs/">ftp.gwdg.de</a>
-<LI>Poland (Warsaw): <A HREF="ftp://sunsite.icm.edu.pl/pub/programming/egcs/">sunsite.icm.edu.pl</a>
-<LI>Sweden: <A HREF="ftp://ftp.sunet.se/pub/gnu/egcs/">ftp.sunet.se</a>
-<LI>Brasil (releases only, no snapshots): <A HREF="ftp://ftp.unicamp.br/pub/gnu/=EXTRA=/cygnus/egcs/">ftp.unicamp.br</a>
-<LI>Portugal: <A HREF="ftp://ftp.lca.uevora.pt/pub/egcs">ftp.lca.uevora.pt</a>
-<LI>Romania: <A HREF="ftp://ftp.lbi.ro/mirrors/ftp.cygnus.com/pub/egcs">ftp.lbi.ro</a>, thanks to <a href="mailto:tim@lbi.ro">Surdu Bogdan</a>!
-<LI>Australia/NZ (release only): <a href="ftp://moshpit.cygnus.com/pub/egcs/">moshpit.cygnus.com</a>
-</ul>
-
-<p>These sites are mirroring <tt>ftp.goof.com</tt>'s site, so we get to mooch
-off of them.  Thanks to Marc Lehmann for mentioning this!
-
-<UL>
-<LI><A HREF="ftp://ftp.goof.com/pub/pcg/egcs/">US: Goof.COM</A>, thanks to <A HREF="http://www.goof.com/~mmead">Matthew C. Mead</A>!
-<LI><A HREF="ftp://ftp.u-aizu.ac.jp/pub/lang/C/pcg/egcs/">JAPAN: ftp.u-aizu.ac.jp (Aizu University)</A>, thanks to <A HREF="mailto:takafumi@u-aizu.ac.jp">Takafumi Hayashi</A>!
-<LI><A HREF="ftp://linux.cis.nctu.edu.tw/pub/packages/pcg/egcs/">TAIWAN: linux.cis.nctu.edu.tw</A>, thanks to <A HREF="http://www.cis.nctu.edu.tw/~is83120/">Aiken Sam</A>!
-<LI><A HREF="ftp://ftp.maisel.int-evry.fr/pub/linux/pentium/egcs/">FRANCE: ftp.minet.net (MINET)</A>, thanks to <A HREF="http://www-eleves.int-evry.fr/~tharan">Olivier Tharan</A>!
-</UL>
-
+<hr>
 <p>We encourage contributions of code, bugfixes, new optimizations, new
 features, documentation updates, web page improvements, etc.  Look
 <a href="contribute.html">here</a> for information about contributing
@@ -216,7 +150,7 @@ to the egcs project.
 
 <hr>
 <a name="glimpsebox"></a>
-<i>Last modified on May 29, 1998.</i>
+<i>Last modified on June 10, 1998.</i>
 
 <!--#include virtual="/glimpsebox.html"-->
 </body>
