--- a/htdocs/faq.html
+++ b/htdocs/faq.html
@@ -40,6 +40,7 @@
   <li><a href="#gnat">Using egcs with GNAT/Ada</a>
   <li><a href="#gpc">Using egcs with GNU Pascal</a>
   <li><a href="#cvssnapshots">Using CVS to download snapshots </a>
+  <li><a href="#picflag-needed">Why can't I build a shared library?</a>
 </ol>
 
 <hr>
@@ -607,8 +608,29 @@ the form "egcs_ss_<date>".  The latest official snapshot always has the
 tag "egcs_latest_snapshot".
 
 <hr>
+<h2><a name="picflag-needed">Why can't I build a shared library?</a></h2>
+<p>When building a shared library you may get an error message from the
+linker like `assert pure-text failed:' or `DP relative code in file'.
+
+<p>This kind of error occurs when you've failed to provide proper flags
+to gcc when linking the shared library. 
+
+<p>You can get this error even if all the .o files for the shared library were
+compiled with the proper PIC option.  When building a shared library, gcc will
+compile additional code to be included in the library.  That additional code
+must also be compiled with the proper PIC option.
+
+<p>Adding the proper PIC option (<tt>-fpic</tt> or <tt>-fPIC</tt>) to the link
+line which creates the shared library will fix this problem.  For example:
+<pre>
+	gcc -c -fPIC myfile.c
+	gcc -shared -o libmyfile.so -fPIC myfile.o
+</pre>
+
+
+<hr>
 <p><a href="index.html">Return to the egcs home page</a>
-<p><i>Last modified:  May  9, 1998</i>
+<p><i>Last modified:  June 12, 1998</i>
 
 <!--#include virtual="/glimpsebox.html"-->
 </body>
