Add mew mirror site.

--- a/htdocs/mirrors.html
+++ b/htdocs/mirrors.html
@@ -30,6 +30,8 @@ if you are mirroring the egcs pages so we can note it here!
 <LI>Portugal: <A HREF="ftp://ftp.lca.uevora.pt/pub/egcs">ftp.lca.uevora.pt</a>
 <LI>Romania: <A HREF="ftp://ftp.lbi.ro/mirrors/ftp.cygnus.com/pub/egcs">ftp.lbi.ro</a>, thanks to <a href="mailto:tim@lbi.ro">Surdu Bogdan</a>!
 <LI>Australia/NZ (release only): <a href="ftp://moshpit.cygnus.com/pub/egcs/">moshpit.cygnus.com</a>
+<LI>Athens, Greece: <a href="ftp://ftp.ntua.gr/pub/gnu//egcs/">ftp.ntua.gr</a>,
+thanks to <a href="mailto:ktroulos@noc.ntua.gr">Costas Troulos</a>.
 </ul>
 
 <p>These sites are mirroring <tt>ftp.goof.com</tt>'s site, so we get to mooch
