--- a/htdocs/index.html
+++ b/htdocs/index.html
@@ -33,6 +33,7 @@ ultimate inclusion into the gcc2 tree.
 href="#releases">releases</a>. We want those releases to work well on
 a variety of native (including linux) and cross targets.  <a
 href="egcs-1.0.3.html"> egcs-1.0.3</a> is the current release.
+<a href="egcs-1.1.html"> egcs-1.1</a> is the upcoming release.
 
 <p>egcs is pronounced "eggs", the c is silent.
 <hr>
@@ -150,7 +151,7 @@ to the egcs project.
 
 <hr>
 <a name="glimpsebox"></a>
-<i>Last modified on June 10, 1998.</i>
+<i>Last modified on June 17, 1998.</i>
 
 <!--#include virtual="/glimpsebox.html"-->
 </body>
