Minor clarification on gas/binutils stuff.

--- a/htdocs/install/build.html
+++ b/htdocs/install/build.html
@@ -20,7 +20,7 @@ the entire egcs compiler system, which includes the following steps:
   gperf.<p>
 
   <li> Build target tools for use by the compiler such as gas, gld, and
-  binutils.<p>
+  binutils if they have been properly unpacked into the egcs source tree.<p>
 
   <li> Perform a 3-stage bootstrap of the compiler.<p>
 
@@ -48,7 +48,7 @@ following steps:
   gperf.<p>
 
   <li> Build target tools for use by the compiler such as gas, gld, and
-  binutils.<p>
+  binutils if they have been properly unpacked into the egcs source tree.<p>
 
   <li> Build the compiler (single stage only).<p>
 
@@ -60,7 +60,7 @@ following steps:
 
 <p>
 <hr>
-<i>Last modified on May 15, 1998.</i>
+<i>Last modified on June 19, 1998.</i>
 
 <!--#include virtual="/glimpsebox.html"-->
 </body>
