--- a/htdocs/egcs-1.1.html
+++ b/htdocs/egcs-1.1.html
@@ -17,9 +17,9 @@ to be found in egcs-1.1, etc.
 <ul>
   <li> <b>July 3, 1998. Feature freeze date</b>.
   <p>All new features, optimizations, etc need to be <i>submitted</i> by
-  this date.  It is very likely we will not be able to integrate all the
-  submissions, but we want to have all of them available for evaluation by
-  this date.
+  this date.  It is very likely that not all submissions will be accepted
+  for egcs-1.1.  But all submissions need to be made available for evaluation
+  by July 3, 1998.
 
   <p> It is also possible some patches which have been submitted and are
   accepted for egcs-1.1 will not have been installed by this date due to
@@ -32,32 +32,33 @@ to be found in egcs-1.1, etc.
   criteria in place.
 
   <p><li> <b>July 11, 1998. Branch Creation & Testing</b>.
-  <p> We will create the egcs-1.1 branch on this date and snapshots will
+  <p> the egcs-1.1 branch will be created on July 11, 1998 and snapshots will
   occur from the egcs-1.1 branch instead of the mainline sources.
 
-  <p> By this date we'd like to have all the new features, optimizations,
-  etc slated for the egcs-1.1 release installed in the source tree.
+  <p> By July 11, 1998 it is hoped that all new features, optimizations, etc
+  slated for the egcs-1.1 release have been installed into the source tree.
   
-  <p> We also expect wide scale, focused testing to start on July 11th.
+  <p> Wide scale, focused testing should start on or before July 11th.
 
   <p> <li> <b>July 31, 1998. Critial Bug Freeze Date</b>.
-  <p>If at all possible we would like to see the release sources freeze
-  except for critical bug fixes by July 31st.  This may be overly optimistic,
-  but it's important to have a goal to shoot for.
+  <p>July 31, 1998 is the target date for freezing the sources.  After this
+  date only critical bugfixes will be accepted for inclusion in egcs-1.1.
+  This may be overly optimistic, but it's important to have a goal to shoot
+  for.
 
 </ul>
 
-<p> I would like to release as soon as possible in early August.
-
+<p> The release should go out as soon as possible in early August.
 
 <p> Note that we have the ability to install changes into the mainline
-sources during this process.  However, I personally will be focusing more
-and more on egcs-1.1 specific issues.
+sources during this process.  However, the main focus will be on the egcs-1.1
+specific issues.
 
-<p> It is highly likely we will have some minor releases based on egcs-1.1;
-we will cross that bridge when the time comes.
+<p> It is highly likely that some minor releases will follow egcs-1.1 (ie
+egcs-1.1.1, egcs-1.1.2, etc).  So if a critical bug does not get fixed for
+egcs-1.1, it may be fixed in one of the minor releases.
 
-<p> I also want to do a post-release review of the proposed schedule vs
+<p> We plan to do a post-release review of the proposed schedule vs
 the actual schedule used for egcs-1.1 so that we can improve the process
 in the future.
 
@@ -67,7 +68,7 @@ be added to this page.  As will the proposed release announcement,
 lists of new features, etc etc.
 
 <hr>
-<i>Last modified on June 17, 1998.</i>
+<i>Last modified on June 19, 1998.</i>
 
 <!--#include virtual="/glimpsebox.html"-->
 </body>
