e 	* --enable-version-specific-runtime-libs: Add documentation for 	this new flag.

--- a/htdocs/install/configure.html
+++ b/htdocs/install/configure.html
@@ -106,6 +106,16 @@ egcs.  A partial list of supported <tt>options</tt>:
   <li> <tt>--with-cpu=</tt><i>cpu</i> -- Specify which cpu variant the compiler should
   generate code for by default.  This is currently only supported on the
   RS6000/PowerPC ports.
+
+  <li> <tt>--enable-version-specific-runtime-libs</tt> -- Specify that runtime
+  libraries should be installed in the compiler specific subdirectory
+  (<tt>${libsubdir}</tt>) rather than the usual places.
+  In addition, libstdc++'s include files will be installed in
+  <tt>${libsubdir}/include/g++</tt> unless you overruled it by using
+  <tt>--with-gxx-include-dir=</tt><i>dirname</i>.
+  Using this option is particularly useful if you intend to use several
+  versions of egcs/gcc in parallel. This is currently supported by <tt>libf2c</tt>
+  and <tt>libstdc++</tt>.
 </ul>
 
 <p>Some options which only apply to building cross compilers:
