Note about StunOS linker failures.

--- a/htdocs/faq.html
+++ b/htdocs/faq.html
@@ -41,6 +41,7 @@
   <li><a href="#gpc">Using egcs with GNU Pascal</a>
   <li><a href="#cvssnapshots">Using CVS to download snapshots </a>
   <li><a href="#picflag-needed">Why can't I build a shared library?</a>
+  <li><a href="#sunos4ld">Linker core dumps on SunOS4</a>
 </ol>
 
 <hr>
@@ -627,10 +628,17 @@ line which creates the shared library will fix this problem.  For example:
 	gcc -shared -o libmyfile.so -fPIC myfile.o
 </pre>
 
+<hr>
+<h2><a name="sunos4ld">SunOS4 Linker core dumps</a></h2>
+A bug in the SunOS4 linker will cause it to crash when linking -fPIC compiled
+objects.
+
+To fix this problem you can either use the most recent version of binutils or
+get the latest SunOS4 linker patch (patch ID 100170-10) from Sun's patch site.
 
 <hr>
 <p><a href="index.html">Return to the egcs home page</a>
-<p><i>Last modified:  June 12, 1998</i>
+<p><i>Last modified:  June 26, 1998</i>
 
 <!--#include virtual="/glimpsebox.html"-->
 </body>
