Add a new page for Mark's alias analysis framework and link it into the main page.

--- a/htdocs/index.html
+++ b/htdocs/index.html
@@ -40,6 +40,10 @@ href="egcs-1.0.3.html"> egcs-1.0.3</a> is the current release.
 <h2>NEWS</h2>
 
 <dl>
+<dt><b>June 29, 1998</b></dt>
+<dd>
+  <a href="alias.html"> <b>Mark Mitchell donates alias analysis framework</b></a>.
+</dd>
 <dt><b>May 26, 1998</b></dt>
 <dd>
   We have added two new mailing lists for the egcs project.
@@ -151,7 +155,7 @@ to the egcs project.
 
 <hr>
 <a name="glimpsebox"></a>
-<i>Last modified on June 17, 1998.</i>
+<i>Last modified on June 29, 1998.</i>
 
 <!--#include virtual="/glimpsebox.html"-->
 </body>
