Note list delays.

--- a/htdocs/lists.html
+++ b/htdocs/lists.html
@@ -48,6 +48,11 @@ your message.
 <tt>-request@cygnus.com</tt> address with a message body of
 <tt>unsubscribe </tt> <i>listname</i> <i>your-email-address</i>.
 
+<p>Currently messages posted to the lists get delivered to list members 24
+to 48 hours after submission to the list.  As a result it may take a 24-48
+hours after you subscribe before messages begin to flow, similarly it may
+take 24-48 after you unsubscribe before the messages stop.
+
 <p>Web archives for all three mailing lists are on-line;
 <a href="http://www.cygnus.com/ml/egcs/">egcs</a>,
 <a href="http://www.cygnus.com/ml/egcs-announce/">egcs-announce</a>,
