--- a/htdocs/contribute.html
+++ b/htdocs/contribute.html
@@ -76,7 +76,7 @@
        Note that, unlike some other projects, we do require ChangeLogs
        also for documentation (i.e., .texi files).
   <li> The patch itself.  If you are accessing the <a href="cvs.html">
-       CVS repository</a> at Cygnus, use "cvs update; cvs diff"; else use
+       CVS repository</a> at Cygnus, use "cvs update; cvs diff -c3p"; else use
        "diff -c3p OLD NEW" or "diff -up OLD NEW".  If your
        version of diff does not support these options, then get the
        latest version of GNU diff.
