Note not to modify the guile subdir.  Also note certain changes that do not need approval for checkins.

--- a/htdocs/checkin.html
+++ b/htdocs/checkin.html
@@ -17,7 +17,9 @@ access to the repository; therefore, we depend on each developer to follow
 follow the appropriate policies.
 
 <p> Also note that the glibc project also has its sources on egcs.cygnus.com;
-under no circumstances should people commit changes into glibc.
+under no circumstances should people commit changes into glibc.  Similarly
+for the guile project which keeps a mirror of their cvs repository on the
+egcs machine.
 
 <ul>
   <li>Global write permission.  A very limited number of developers have
@@ -40,6 +42,10 @@ under no circumstances should people commit changes into glibc.
 <p>The list of folks with write access to the repository can be found in the
 <tt>MAINTAINERS</tt> file in the egcs distribution.
 <hr>
+
+<p>Also note that fixes for obvious typos in ChangeLog files, docs, web
+pages, comments and similar stuff need not be approved.  Just check in the
+fix.  We don't want to get overly anal about checkin policies.
 
 <h2>Checking in a change</h2>
 
@@ -270,7 +276,7 @@ you should check them in with separate cvs commit commands.
 <p>And that's it!
 
 <hr>
-<i>Last modified on February 9, 1998.</i>
+<i>Last modified on July 2, 1998.</i>
 
 </body>
 </html>
