Note location of web pages in the CVS tree.

--- a/htdocs/cvs.html
+++ b/htdocs/cvs.html
@@ -72,10 +72,15 @@ href="http://www.loria.fr/~molli/cvs/doc/cvs_toc.html">http://www.loria.fr/~moll
 Links to some books can be found on <a href="http://www.cyclic.com">
 http://www.cyclic.com</a>.
 
+<p>One final note, the web pages for the egcs project are also in the
+CVS repository and you can check them out, submit patches, etc just like
+you do for the compiler itself.  Use "cvs co wwwdocs" to check out the
+web pages.
+
 
 
 <hr>
-<i>Last modified on April 23, 1998.</i>
+<i>Last modified on July 2, 1998.</i>
 
 <hr>
 <a href="">Return to the egcs home page</a>
