Note '::' problems in GCC_EXEC_PREFIX and friends.

--- a/htdocs/faq.html
+++ b/htdocs/faq.html
@@ -496,6 +496,8 @@ from your environment.  If you do not find an explicit '.', look for
 an empty pathname in those variables.  Note that ':' at either the start
 or end of these variables is an implicit '.' and will cause problems.
 
+<p>Also note '::' in these paths will also cause similar problems.
+
 <hr>
 <h2> <a name="kde">EGCS will not build KDE</a></h2>
 <p> Previous versions of g++ accepted (as a GNU extension)
@@ -669,7 +671,7 @@ if you have RH 5.0.
 
 <hr>
 <p><a href="index.html">Return to the egcs home page</a>
-<p><i>Last modified:  June 26, 1998</i>
+<p><i>Last modified:  July 5, 1998</i>
 
 <!--#include virtual="/glimpsebox.html"-->
 </body>
