Fixes from Gerald.

--- a/htdocs/lists.html
+++ b/htdocs/lists.html
@@ -22,7 +22,7 @@ with an open subscription and post policy.
   submissions and discussion of particular patches.  All patch submissions
   and all discussion for a particular patch should be sent to
   <b>egcs-patches</b>
-  <li><b>egcs-cvs</b> is read-only, relatively high volume list which tracks
+  <li><b>egcs-cvs</b> is a read-only, relatively high volume list which tracks
   checkins to the egcs CVS repository.
 </ul>
   
@@ -38,15 +38,16 @@ web or ftp server somewhere and note the location of the attachment in
 your message.
 
 <p>To subscribe to a list, send mail to
-<i>listname</i><tt>-request@cygnus.com<tt> with a message body consisting of
-
+<i>listname</i><tt>-request@cygnus.com</tt> with a message body consisting of
 <blockquote>
-  <tt>subscribe </tt> <i>listname</i> <i>your-email-address</i>
-</blockquote>
+  <tt>subscribe</tt> <i>listname</i> <i>your-email-address</i>
+</blockquote></p>
 
 <p>To unsubscribe, send a mail note to the appropriate
 <tt>-request@cygnus.com</tt> address with a message body of
-<tt>unsubscribe </tt> <i>listname</i> <i>your-email-address</i>.
+<blockquote>
+  <tt>unsubscribe </tt> <i>listname</i> <i>your-email-address</i>
+</blockquote></p>
 
 <p>Currently messages posted to the lists get delivered to list members 24
 to 48 hours after submission to the list.  As a result it may take a 24-48
@@ -71,7 +72,7 @@ future.
 
 <hr>
 <a name="glimpsebox"></a>
-<p><i>Last modified:  June 10, 1998</i>
+<p><i>Last modified:  July  3, 1998</i>
 
 <!--#include virtual="/glimpsebox.html"-->
 </body>
