--- a/htdocs/lists.html
+++ b/htdocs/lists.html
@@ -31,6 +31,7 @@ with an open subscription and post policy.
 <p>When posting messages, please select an appropriate list for the message
 and try to avoid cross posting a message to several lists.
 
+<a name="msgsize"></a>
 <p>All the lists have a 40 kilobyte maximum message size.  If your message
 is more than 40kbytes, you might try compressing any attachments.  If it
 is still more than 40kbytes, then you should put the attachments on a
@@ -72,7 +73,7 @@ future.
 
 <hr>
 <a name="glimpsebox"></a>
-<p><i>Last modified:  July  3, 1998</i>
+<p><i>Last modified:  July  6, 1998</i>
 
 <!--#include virtual="/glimpsebox.html"-->
 </body>
