Start fleshing out a testing plan.

--- a/htdocs/egcs-1.1.html
+++ b/htdocs/egcs-1.1.html
@@ -12,6 +12,12 @@
 for egcs-1.1, the testing/release criteria for egcs-1.1, new features
 to be found in egcs-1.1, etc.
 
+
+<p> July 7, 1998.  The <a href="egcs-1.1-test.html">testing plan</a> is not
+    ready yet, but we are actively working on solidifying the testing plan.
+
+
+
 <p>The tenative schedule for the egcs-1.1 release is:
 
 <ul>
@@ -62,13 +68,8 @@ egcs-1.1, it may be fixed in one of the minor releases.
 the actual schedule used for egcs-1.1 so that we can improve the process
 in the future.
 
-
-<p> When the testing plan and release criteria are available, they'll
-be added to this page.  As will the proposed release announcement,
-lists of new features, etc etc.
-
 <hr>
-<i>Last modified on June 19, 1998.</i>
+<i>Last modified on July 7, 1998.</i>
 
 <!--#include virtual="/glimpsebox.html"-->
 </body>
