Fix HTML errors.

--- a/htdocs/faq.html
+++ b/htdocs/faq.html
@@ -336,7 +336,7 @@ nm utilities will be found.
 
 <p>binutils-2.8 builds those files as gas.new, ld.new and nm.new; egcs gcc
 looks for them using gas-new, ld-new and nm-new, so you may have to arrange
-for any symlinks which point to &ltfile&gt.new to be changed to &ltfile&gt-new.
+for any symlinks which point to &lt;file&gt;.new to be changed to &lt;file&gt;-new.
 
 <hr>
 <h2> <a name="snapshot">Snapshots, how, when, why</a></h2>
@@ -516,7 +516,7 @@ is no longer accepted by g++.
 patches are available to fix KDE.
 
 <hr>
-<h2> <a name="friend">Friend Templates<a></h2>
+<h2> <a name="friend">Friend Templates</a></h2>
 <p>In order to make a specialization of a template function a friend of a
 (possibly template) class, you must explicitly state that the friend
 function is a template, by appending angle brackets to its name, and
@@ -526,7 +526,7 @@ people to believe that was not necessary, but it is, and it was fixed
 in the final version of the Standard.
 
 <hr>
-<h2> <a name="libg++">Where to find libg++<a></h2>
+<h2> <a name="libg++">Where to find libg++</a></h2>
 <p>Many folks have been asking where to find libg++ for egcs.  First we
 should point out that few programs actually need libg++; most only need
 libstdc++/libio which are included in the egcs distribution.
@@ -536,7 +536,7 @@ from <a href="ftp://ftp.yggdrasil.com/private/hjl/libg++-2.8.1-980119.tar.gz">
 ftp://ftp.yggdrasil.com/private/hjl/libg++-2.8.1-980119.tar.gz</a>
 
 <hr>
-<h2> <a name="generated_files">autoconf, bison, xgettext, automake, etc<a></h2>
+<h2> <a name="generated_files">autoconf, bison, xgettext, automake, etc</a></h2>
 <p>If you're using diffs up dated from one snapshot to the next, or
 if you're using the CVS repository, you may need several additional programs
 to build egcs.
@@ -559,7 +559,7 @@ touch egcs/gcc/objc/objc-parse.{c,y}
 </pre>
 
 <hr>
-<h2> <a name="aix">EGCS does not work on AIX 4.3<a></h2>
+<h2> <a name="aix">EGCS does not work on AIX 4.3</a></h2>
 <p>EGCS does not currently support AIX4.3; however, if you want to try
 and make it work with AIX 4.3 we highly recommend you get the
 fix for APAR IX74254 (64BIT DISASSEMBLED OUPUT FROM COMPILER FAILS TO
@@ -608,7 +608,7 @@ front-end is not currently supported by egcs.
 out the latest snapshot.
 
 <p>We use cvs tags to identify each snapshot we make.  Snapshot tags have
-the form "egcs_ss_<date>".  The latest official snapshot always has the
+the form "egcs_ss_&lt;date>".  The latest official snapshot always has the
 tag "egcs_latest_snapshot".
 
 <hr>
