--- a/htdocs/index.html
+++ b/htdocs/index.html
@@ -114,7 +114,7 @@ answering some of them</a>.  We'll add more later.
 lists?  All the information you need to access the <a href="lists.html">
 mailing lists </a> can be found here. 
 
-<h2><a name=snapshots>SNAPSHOTS</h2>
+<h2><a name=snapshots>SNAPSHOTS</a></h2>
 
 <p>Snapshots are generated weekly and put up for ftp.  If you are going
 to mess with snapshots, you should definitely be subscribed to the
@@ -135,7 +135,7 @@ sent to the egcs list.
 <p>Using a snapshot before it's officially made available is an unwise thing
 to do since it may become impossible to update to an official snapshot.
 
-<h2><a name="releases">RELEASES</h2>
+<h2><a name="releases">RELEASES</a></h2>
 
 <p>Releases are available from <a
 href="ftp://egcs.cygnus.com/pub/egcs/releases/index.html">
