--- a/htdocs/lists.html
+++ b/htdocs/lists.html
@@ -42,13 +42,13 @@ your message.
 <i>listname</i><tt>-request@cygnus.com</tt> with a message body consisting of
 <blockquote>
   <tt>subscribe</tt> <i>listname</i> <i>your-email-address</i>
-</blockquote></p>
+</blockquote>
 
 <p>To unsubscribe, send a mail note to the appropriate
 <tt>-request@cygnus.com</tt> address with a message body of
 <blockquote>
   <tt>unsubscribe </tt> <i>listname</i> <i>your-email-address</i>
-</blockquote></p>
+</blockquote>
 
 <p>Currently messages posted to the lists get delivered to list members 24
 to 48 hours after submission to the list.  As a result it may take a 24-48
