Notes on the egcs-1.1 branch.

--- a/htdocs/egcs-1.1.html
+++ b/htdocs/egcs-1.1.html
@@ -12,11 +12,11 @@
 for egcs-1.1, the testing/release criteria for egcs-1.1, new features
 to be found in egcs-1.1, etc.
 
+<p> July 14, 1998.  We have created the <a href="egcs-1.1-branch.html">
+egcs-1.1 branch</a>. 
 
 <p> July 7, 1998.  The <a href="egcs-1.1-test.html">testing plan</a> is not
     ready yet, but we are actively working on solidifying the testing plan.
-
-
 
 <p>The tenative schedule for the egcs-1.1 release is:
 
@@ -69,7 +69,7 @@ the actual schedule used for egcs-1.1 so that we can improve the process
 in the future.
 
 <hr>
-<i>Last modified on July 7, 1998.</i>
+<i>Last modified on July 14, 1998.</i>
 
 <!--#include virtual="/glimpsebox.html"-->
 </body>
