Mention replay.com and X forwarding.

--- a/htdocs/cvswrite.html
+++ b/htdocs/cvswrite.html
@@ -13,9 +13,12 @@ access available the CVS repository for all our significant developers.
 cyclic software at <a href="http://www.cyclic.com/"> http://www.cyclic.com</a>.
 
 <p>Authenticated access is provided via ssh, which you can retrieve from
-<a href="http://www.cs.hut.fi/ssh/"> http://www.cs.hut.fi.</a>  ssh should
+<a href="http://www.cs.hut.fi/ssh/">http://www.cs.hut.fi</a>.  ssh should
 build and install without any trouble and the default configuration files
-should be suitable for access to the egcs CVS server.
+should be suitable for access to the egcs CVS server.  Packaged versions
+for Debian and RedHat GNU/Linux systems are available from
+<a href="ftp://ftp.replay.com/pub/replay/pub/linux">
+ftp://ftp.replay.com/pub/replay/pub/linux</a>.
 
 <p>You will need to provide us with your public key.  You can generate one
 via the "ssh-keygen" program.  This will store your public key in to the
@@ -54,7 +57,12 @@ Either start your session as a child of <code>ssh-agent</code> or run
 it as a demon and set the values of the environment variables
 <code>SSH_AUTHENTICATION_SOCKET</code> and <code>SSH_AGENT_PID</code>
 in each relevant process to what <code>ssh-agent</code> prints when it
-starts.
+starts.  To avoid messages about (lack of) X11 forwarding, put in your
+<samp>~/.ssh/config</samp> and entry like:
+<pre>
+Host egcs.cygnus.com
+ForwardX11 no
+</pre>
 
 <p>Enjoy!
 
@@ -71,7 +79,7 @@ your changes back in they will automatically be checked out into the
 web server's data area.
 
 <hr>
-<i>Last modified on May 07, 1998.</i>
+<i>Last modified on July 13, 1998.</i>
 
 <hr>
 <a href="/">Return to the egcs home page</a>
