--- a/htdocs/install/index.html
+++ b/htdocs/install/index.html
@@ -2,7 +2,7 @@
 <head>
 <title>Installing egcs</title>
 </head>
-<body bgcolor="white">
+<body>
 <h1 align="center">Installing egcs</h1>
 
 <p>This document describes the generic installation procedure for egcs as
@@ -40,8 +40,7 @@ a bug report.
 
 <hr>
 <a href="../index.html">Return to the egcs home page</a>
-</body>
-</html>
 <hr>
 <i>Last modified on May 15, 1998.</i>
-
+</body>
+</html>
